# WeatherForecast

./: CMakeLists.txt  README.md  config.json
include/: Day.h  Forecast.h  Weather.h
src/: backend.cpp  frontend.cpp  main.cpp
